@@ -108,6 +108,10 @@ asciidoctorj {
 
 asciidoctor {
 	dependsOn asciidoctorPdf
+	inProcess = JAVA_EXEC
+	forkOptions {
+		jvmArgs '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED', '--add-opens', 'java.base/java.io=ALL-UNNAMED'
+	}
 	baseDirFollowsSourceFile()
 	configurations 'asciidoctorExt'
 	sourceDir "$buildDir/asciidoc"
